@@ -123,9 +123,9 @@
 	(cnum 0)
 	(i 0)
 	title titles urls len buf cbuf)
-    (mapcar (lambda (x)
-	      (setq titles (cons (cons (car x) (car x)) titles)))
-	    sessions)
+    (mapc (lambda (x)
+	    (setq titles (cons (cons (car x) (car x)) titles)))
+	  sessions)
     (setq title (or w3m-current-title
 		    (save-excursion
 		      (set-buffer (car bufs))
@@ -239,18 +239,18 @@
 	 window last-window num-or-sym pos)
     (if (not sessions)
 	(message "No saved session")
-      (mapcar (lambda (x)
-		(setq title (format "%s[%d]" (nth 0 x) (length (nth 2 x))))
-		(setq wid (string-width title))
-		(when (> wid max)
-		  (setq max wid))
-		(setq titles (cons title titles))
-		(setq times (cons (format-time-string w3m-session-time-format
-						      (nth 1 x))
-				  times))
-		(setq urls (cons (mapconcat 'identity (nth 2 x) ", ")
-				 urls)))
-	      sessions)
+      (mapc (lambda (x)
+	      (setq title (format "%s[%d]" (nth 0 x) (length (nth 2 x))))
+	      (setq wid (string-width title))
+	      (when (> wid max)
+		(setq max wid))
+	      (setq titles (cons title titles))
+	      (setq times (cons (format-time-string w3m-session-time-format
+						    (nth 1 x))
+				times))
+	      (setq urls (cons (mapconcat 'identity (nth 2 x) ", ")
+			       urls)))
+	    sessions)
       (setq titles (nreverse titles))
       (setq times (nreverse times))
       (setq urls (nreverse urls))
