@@ -1,3 +1,7 @@
+2007-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* sb-tdiary.el (shimbun-make-contents): Use mapc instead of mapcar.
+
 2007-09-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* shimbun.el (shimbun-decode-entities-string): Define as an alias
